// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader renders 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 hiEkd"
      size="medium"
    />
  </div>
</div>
`;

exports[`Loader renders with different colours 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 hiEkd"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 jwbHaB"
      color="dodoria.100"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 eqshXh"
      color="trunks.100"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 hEvkkd"
      color="#663399"
      size="medium"
    />
  </div>
</div>
`;

exports[`Loader renders with sizes 1`] = `
<div
  className="Inline-sc-1rz1cju-0 kwswbg"
>
  <div
    className="OuterCircle-sc-1059clw-0 cBDWNI"
    role="progressbar"
    size="twoxsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 AwctS"
      size="twoxsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 kwvAxI"
    role="progressbar"
    size="xsmall"
  >
    <span
      className="InnerCircle-sc-6khuip-0 hiEkd"
      size="xsmall"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 fDOafQ"
    role="progressbar"
    size="small"
  >
    <span
      className="InnerCircle-sc-6khuip-0 enCLIX"
      size="small"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 foKFxY"
    role="progressbar"
    size="medium"
  >
    <span
      className="InnerCircle-sc-6khuip-0 hiEkd"
      size="medium"
    />
  </div>
  <div
    className="OuterCircle-sc-1059clw-0 hwfNCU"
    role="progressbar"
    size="large"
  >
    <span
      className="InnerCircle-sc-6khuip-0 fvkvFD"
      size="large"
    />
  </div>
</div>
`;
